# lilydict

./: .gitignore  CMakeLists.txt  LilyDict.pro  README.md  icons.qrc  qml.qrc
src/: main.cpp
src/app/: application.cpp  application.h  config.cpp  config.h  dictlogo.cpp  dictlogo.h
src/dict/: dict.cpp  dict.h  dictlogo.h  shanbaydict.cpp  shanbaydict.h  youdaodict.cpp  youdaodict.h
src/gui/: About.qml  Balloon.qml  BalloonForm.ui.qml  Gui.cpp  Gui.h  Login.qml  Setup.qml  SetupForm.ui.qml  WinInfo.qml  dictlogo.cpp  icon.qrc  main.qml  qml.qrc
src/gui/qml/: AboutForm.ui.qml  Balloon.qml  BalloonForm.ui.qml  Dict.qml  Login.qml  LoginForm.ui.qml  MainForm.ui.qml  ScrollBar.qml  Setup.qml  SetupForm.ui.qml  Upgrade.qml  UpgradeForm.ui.qml  WinInfo.qml  main.qml  qml.qrc
src/net/: shanbaynet.cpp  shanbaynet.h
